2001-07-05  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/druid-qif-import.c: fix syntax bug.

	* doc/sgml/C/image/<lots.png>: new and updated screenshots.

	* doc/sgml/C/image/Makefile.am: include new files.

	* doc/sgml/C/{lots}.sgml: update for new screenshots.

2001-07-04  Bill Gribble  <grib@billgribble.com>

	* src/gnome/druid-qif-import.c: fix cut-n-paste error in 
	default_acct_back handler; fixes bug #106.  

	* src/gnome/glade/qif.glade: add some explanatory text about 
	what the "back" button does where it's not obvious

	* (later) actually fix #106... first patch didn't do it
	
2001-07-04  Dave Peticolas  <dave@krondo.com>

	* Makefile.am: add gnc-glossary.txt to the dist

	* src/engine/sixtp.c (sixtp_handle_catastrophe): fix bug -- don't
	destroy last stack frame

2001-07-03  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/register.scm: add exported functions and needed modules

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/date-utilities.scm: Nicholas Lee's bug fix

	* src/.cvsignore: adjust for new program

	* rpm/gnucash.spec.in: adjust for new program

	* src/Makefile.am: adjust for new program

	* src/gnucash-make-guids.c: new program to aid in GUID creation

	* src/engine/sql/putil.h: Alex Zepeda's patch converting atol->strtoll.

	* src/scm/commodity-utilities.scm: fix bug -- use srfi-1 to
	make sure we get the right 'last'

	* src/scm/Makefile.am: same as below

	* src/scm/report/Makefile.am: fix bugs -- put modulized scm
	files back into dist and strings targets

	* src/scm/report/taxtxf.scm: fix bug, eliminate use of append

	* src/MultiLedger.c: same as below

	* src/register/table-allgui.c: same as below

	* src/register/splitreg.c: same as below

	* src/register/splitreg.h: same as below

	* src/register/table-allgui.h: rename TableView to TableModel.
	Put cell data handlers into the model.

2001-07-02  Dave Peticolas  <dave@krondo.com>

	* many header files: apply Ben Stanley's script to